--- a/TESTE DEV/formulario/Dev-teste/bin/main/application-prod.properties
+++ b/TESTE DEV/formulario/Dev-teste/bin/main/application-prod.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://awseb-e-6rjdwhgqfz-stack-awsebrdsdatabase-uu3
 spring.datasource.username=root
 spring.datasource.password=loirinha157
 spring.datasource.initialization-mode=always
+
+/*A senha é horrivel, eu sei.*/
