--- a/TESTE DEV/formulario/Dev-teste/bin/main/application-dev.properties
+++ b/TESTE DEV/formulario/Dev-teste/bin/main/application-dev.properties
@@ -6,5 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=loirinha157
 spring.datasource.initialization-mode=always
 
-
+/*A senha é horrivel, eu sei.*/
 
